Fix long url wrap issue for pre-existing urls

--- a/website/static/css/pages/profile-page.css
+++ b/website/static/css/pages/profile-page.css
@@ -129,3 +129,14 @@ table.table.table-plain th, table.table.table-plain td {
 .no-bottom-border {
     border-bottom-width: 0;
 }
+
+/* Table
+-----------------------*/
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+table a {
+  word-wrap: break-word;
+}
